--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,7 @@ jobs:
 
       - name: Build with PyInstaller
         run: |
-          pyinstaller main.py --name WingmanAI --noconfirm --hidden-import edge_tts --add-data "services;services" --add-data "wingmen;wingmen" --add-data "audio_samples;audio_samples"
-          Copy-Item "config.example.yaml" -Destination "dist/WingmanAI/_internal/config.yaml" -Force
+          pyinstaller main.py --name WingmanAI --noconfirm --windowed --icon assets/icons/wingman-ai.png --paths Lib/site-packages --add-data "assets;assets" --add-data "services;services" --add-data "configs/system/config.example.yaml;configs/system/." --add-data "wingmen;wingmen" --add-data "audio_samples;audio_samples" --add-data "LICENSE;."
 
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v3
@@ -34,39 +33,8 @@ jobs:
           name: WingmanAI-Windows
           path: dist/WingmanAI/
 
-  build-macos:
-    name: Build MacOS Executable
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11.6'
-
-      - name: Install PyInstaller
-        run: pip install pyinstaller
-
-      - name: Install portaudio as fix for pyaudio
-        run: brew install portaudio
-
-      - name: Install WingmanAI Dependencies
-        run: pip install -r requirements.txt
-
-      - name: Build with PyInstaller
-        run: |
-          pyinstaller main.py --name WingmanAI --noconfirm --hidden-import edge_tts --add-data "services:services" --add-data "wingmen:wingmen" --add-data "audio_samples:audio_samples"
-          cp config.example.yaml dist/WingmanAI/_internal/config.yaml
-
-      - name: Upload MacOS Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: WingmanAI-macOS
-          path: dist/WingmanAI/
-
   release:
-    needs: [build-windows, build-macos]
+    needs: [build-windows]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -80,6 +48,5 @@ jobs:
         with:
           files: |
             WingmanAI-Windows.zip
-            WingmanAI-macOS.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
